--- a/index.css
+++ b/index.css
@@ -8,6 +8,13 @@ body {
   color: white;
 }
 
+.SepararRelatorios {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .logo {
   width: 70%;
   margin-top: 50px;
