--- a/contratos.css
+++ b/contratos.css
@@ -1,30 +1,52 @@
+body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  background: rgb(17, 121, 182, 0.7);
+  font-family: "Roboto", sans-serif;
+  color: white;
+}
+
 .verde{
-    height: 10vw;
     background: green;
-    line-height: 0.5;
     color: white;
+    padding: 5px;
+    margin-bottom: 7px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.47);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .amarelo{
-    height: 10vw;
-    background: yellow;
-    line-height: -0.2px;
+    background: #D4AF1A;
     padding: 5px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    margin-bottom: 7px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.47);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .preto{
-    height: 10vw;
     background: black;
-    line-height: 0.5;
     color: white;
+    padding: 5px;
+    margin-bottom: 7px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.47);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .vermelho{
-    height: 10vw;
     background: red;
-    line-height: 0.5;
     color: white;
+    padding: 5px;
+    margin-bottom: 7px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.47);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
