--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background: rgb(17, 121, 182, 0.7);
   font-family: "Roboto", sans-serif;
   color: white;
-  font-weight: bold 30px;
 }
+
+a { text-decoration: none !important; color: white !important; }
 
 .SepararRelatorios {
   width: 50%;
@@ -75,7 +76,6 @@ button {
   border: #116591;
   height: 4vh;
   color: white;
-  font-weight: bold 150px;
 }
 
 button:focus {
