--- a/contratos.css
+++ b/contratos.css
@@ -8,22 +8,27 @@ body {
   color: white;
 }
 
+a {
+  text-decoration: none !important;
+  color: white !important;
+}
+
 .logo {
   width: 70%;
   margin-top: 50px;
   margin-bottom: 20px;
 }
 
-
 button {
-    background: #f8be1e;
-    position: absolute;
-    left: 0;
-    height: 5%;
-    border: none;
-    color: white;
-    font-weight: bold;
-  }
+  background: #f8be1e;
+  position: absolute;
+  left: 0;
+  height: 5%;
+  border: none;
+  color: white;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.47);
+}
 
 .verde {
   background: green;
