--- a/index.css
+++ b/index.css
@@ -76,6 +76,7 @@ button {
   border: #116591;
   height: 4vh;
   color: white;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.47);
 }
 
 button:focus {
@@ -83,7 +84,8 @@ button:focus {
 }
 
 .sair {
-  background: #b38403;
+  background: #f8be1e;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.47);
 }
 
 .branco {
