--- a/checkinput.css
+++ b/checkinput.css
@@ -12,6 +12,15 @@ body {
 .divCentraliza {
   display: flex;
   align-items: center;
+  width: 100%;
+}
+
+.div-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 50px;
 }
 
 a {
@@ -28,7 +37,7 @@ input {
 }
 
 label {
-  width: 80%;
+  width: 90%;
 }
 
 button {
